# AGH_programming

./: README.md
Functional Programming in Scala/l10/: MyMaybeMonad.scala  zad1.scala
Functional Programming in Scala/l11/: zad1.scala  zad2.scala
Functional Programming in Scala/l12/: task1.scala
Functional Programming in Scala/l2/: Hello.scala  zad2.scala
Functional Programming in Scala/l3/: zad1.scala  zad2.scala
Functional Programming in Scala/l4/: zad1.scala  zad2.scala
Functional Programming in Scala/l5/: zad1.scala  zad2.scala
Functional Programming in Scala/l6/: zad1.scala  zad2.scala
Functional Programming in Scala/l7/: zad1.scala  zad2.scala
Functional Programming in Scala/l8/: zad1.scala  zad2.scala
Functional Programming in Scala/l9/: zad1.scala  zad2.scala
Functional Programming in Scala/other/: zad1.scala  zad2.scala
Introduction to OOP/: readme.md
Introduction to OOP/l10/: CMakeLists.txt  main.cpp
Neural Nets (Keras)/: covid.py  covid_fun.py  covid_fun_lstm.py  covid_lstm.py  fashion.py  nn.py  nums.py  obrazki.py  photo_classification.py  pictures.py  picturesv2.py  readme.md  seeds.py  solution_4.py  sonar.py  weather.py
OOP/l2/: CMakeLists.txt
OOP/l2/include/: Algo.h  Argumenty.h  Pierwiastek.h  Suma.h
OOP/l2/src/: Argumenty.cpp
OOP/l6/: CMakeLists.txt
OOP/l6/include/: MathExpr.h  Operation.h  Primitive.h  Product.h  Ratio.h  Sum.h
OOP/l6/src/: Operation.cpp  Primitive.cpp  Product.cpp  Ratio.cpp  Sum.cpp
Python/: l10.py  l11.py  l12.py  l13.py  l14.py  l3.py  l4.py  l5.py  l6.py  l7.py  l8.py  l9.py
(+138 files in other folders)
